--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
+        "fruitcake/laravel-cors": "^3.0",
         "laravel/lumen-framework": "^8.3.1",
         "mercadopago/dx-php": "^2.5"
     },
