--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.4|^8.0",
         "ext-json": "*",
         "fruitcake/laravel-cors": "^3.0",
+        "guzzlehttp/guzzle": "^7.7",
         "laravel/lumen-framework": "^8.3.1",
         "mercadopago/dx-php": "^2.5"
     },
